--- a/package.json
+++ b/package.json
@@ -1,42 +1,74 @@
 {
-  "name": "vue",
-  "version": "0.1.0",
+  "name": "active-learning",
+  "description": "BKM.it Active Learning e-learning platform",
+  "author": "Lorenzo Foca - lorenzo.foca@bkm.it",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "buildvue": "vue-cli-service build"
   },
   "dependencies": {
-    "@vue/cli-plugin-babel": "4.1.1",
-    "vue": "^2.6.11",
-    "vue-meta": "2.3.3"
+    "archiver": "^3.0.0",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-2": "^6.18.0",
+    "babel-runtime": "^6.18.0",
+    "body-parser": "^1.15.2",
+    "chance": "^1.0.4",
+    "cross-env": "^3.2.4",
+    "css-element-queries": "^0.4.0",
+    "express": "^4.14.0",
+    "fs": "0.0.1-security",
+    "html2canvas": "^0.5.0-beta4",
+    "https": "^1.0.0",
+    "jspdf": "^1.3.5",
+    "loader-utils": "^0.2.16",
+    "lz-string": "^1.4.4",
+    "multer": "^1.2.0",
+    "path": "^0.12.7",
+    "request": "^2.79.0",
+    "rimraf": "^2.6.2",
+    "serve-index": "^1.9.1",
+    "vue": "^2.1.0",
+    "vue-meta": "2.3.3",
+    "vue-alert": "^1.0.1",
+    "vue-checkbox-radio": "^0.6.0",
+    "vue-datepicker": "^1.3.0",
+    "vue-html-editor": "^0.2.1",
+    "vue-morris": "0.0.5",
+    "vue-resource": "^1.0.3",
+    "vue-resource-2": "^0.8.0",
+    "vue-router": "^2.1.0",
+    "vue-select": "^2.2.0",
+    "vue-spinner": "^1.0.2",
+    "vue2-editor": "^2.0.26",
+    "vuedraggable": "^2.8.6",
+    "vuejs-datepicker": "^0.9.20",
+    "vuejs-paginator": "^2.0.0",
+    "vuex": "^2.0.0",
+    "webpack": "^2.1.0-beta.27",
+    "zip-folder": "^1.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-eslint": "4.1.1",
-    "@vue/cli-service": "4.1.1",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.0.1",
-    "vue-template-compiler": "^2.6.11"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": ["plugin:vue/essential", "eslint:recommended"],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"],
-  "keywords": ["vue", "vuejs", "starter"],
-  "description": "Vue.js example starter project"
+    "babel-core": "^6.0.0",
+    "babel-loader": "^6.0.0",
+    "babel-plugin-transform-runtime": "^6.0.0",
+    "babel-preset-es2015": "^6.0.0",
+    "babel-preset-stage-2": "^6.0.0",
+    "cross-env": "^3.1.3",
+    "css-loader": "^0.26.0",
+    "file-loader": "^0.9.0",
+    "json-loader": "^0.5.4",
+    "url-loader": "^0.5.7",
+    "vue-meta": "2.3.3",
+    "vue-hot-reload-api": "^2.0.6",
+    "vue-html-loader": "^1.0.0",
+    "vue-loader": "^10.0.2",
+    "vue-style-loader": "^1.0.0",
+    "vue-template-compiler": "^2.1.3",
+    "webpack": "^2.1.0-beta.27",
+    "webpack-dev-server": "2.1.0-beta.12"
+  }
 }
