--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "active-learning",
-  "description": "BKM.it Active Learning e-learning platform",
-  "author": "Lorenzo Foca - lorenzo.foca@bkm.it",
-  "private": true,
+  "name": "F3D",
+  "description": "A brand new way to do 3D character",
+  "author": "Michele Diegoli",
+  "private": false,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
