--- a/package.json
+++ b/package.json
@@ -27,16 +27,17 @@
     "loader-utils": "^0.2.16",
     "lz-string": "^1.4.4",
     "multer": "^1.2.0",
+    "offscreen-canvas": "^0.1.1",
     "path": "^0.12.7",
     "request": "^2.79.0",
     "rimraf": "^2.6.2",
     "serve-index": "^1.9.1",
     "vue": "^2.1.0",
-    "vue-meta": "2.3.3",
     "vue-alert": "^1.0.1",
     "vue-checkbox-radio": "^0.6.0",
     "vue-datepicker": "^1.3.0",
     "vue-html-editor": "^0.2.1",
+    "vue-meta": "2.3.3",
     "vue-morris": "0.0.5",
     "vue-resource": "^1.0.3",
     "vue-resource-2": "^0.8.0",
